--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,8 @@
 	"version": "1.0.0",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js"
+		"start": "node index.js",
+		"dev": "nodemon index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -12,6 +13,7 @@
 	"dependencies": {
 		"axios": "^1.7.2",
 		"cors": "2.8",
-		"express": "4.18"
+		"express": "4.18",
+		"nodemon": "^3.1.4"
 	}
 }
